<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>behavior_tree</name>
  <version>0.1.2</version>
  <description>Behavior tree implementation for SAM XL</description>
  <maintainer email="e.l.f.foster@tudelft.nl">Erich L Foster</maintainer>
  <license>Proprietary</license>

  <exec_depend>abb_robot_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>damage_inspection_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>object_segmentation_msgs</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-setuptools</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2_numpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
