<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_trees_parser</name>
  <version>0.6.0</version>
  <description>A py_trees xml parser</description>
  <maintainer email="e.l.f.foster@tudelft.nl">Erich L Foster</maintainer>
  <license>apache 2.0</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>py_trees</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>
  <exec_depend>pynput-pip</exec_depend>
  <exec_depend>python3-setuptools</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
